--- a/index.html
+++ b/index.html
@@ -296,6 +296,109 @@
     <!-- Spin & Win section end -->
 
 
+    <!-- testimonali section  -->
+    <div class="testimonial ptb">
+        <div class="container">
+            <div class="testimonial_wrapper">
+                <h2 class="main-heading">What Players Love About Socialsino
+                </h2>
+                <div class="testimonial_inner">
+
+                    <div class="testimonialSec">
+                        <!-- sec1 -->
+                        <div>
+                            <div class="testimonial_card">
+                                <div class="testimonial_cardProfilSec">
+                                    <div class="testimonial_cardProfil">
+                                    </div>
+                                </div>
+                                <div class="testimonial_content">
+                                    <p>Socialsino makes playing casino games so much more fun with friends!</p>
+                                    <h6>PixelPenny</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- sec2 -->
+                        <div>
+                            <div class="testimonial_card">
+                                <div class="testimonial_cardProfilSec">
+                                    <div class="testimonial_cardProfil">
+                                    </div>
+                                </div>
+                                <div class="testimonial_content">
+                                    <p>The leaderboards and tournaments keep me coming back every day!</p>
+                                    <h6>ThunderTheo
+                                    </h6>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- sec3 -->
+                        <div>
+                            <div class="testimonial_card">
+                                <div class="testimonial_cardProfilSec">
+                                    <div class="testimonial_cardProfil">
+                                    </div>
+                                </div>
+                                <div class="testimonial_content">
+                                    <p>I love collecting rewards and climbing the ranks!</p>
+                                    <h6>BlazeBrandon
+                                    </h6>
+                                </div>
+                            </div>
+                        </div>
+
+
+                         <!-- sec1 -->
+                         <div>
+                            <div class="testimonial_card">
+                                <div class="testimonial_cardProfilSec">
+                                    <div class="testimonial_cardProfil">
+                                    </div>
+                                </div>
+                                <div class="testimonial_content">
+                                    <p>Socialsino makes playing casino games so much more fun with friends!</p>
+                                    <h6>PixelPenny</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- sec2 -->
+                        <div>
+                            <div class="testimonial_card">
+                                <div class="testimonial_cardProfilSec">
+                                    <div class="testimonial_cardProfil">
+                                    </div>
+                                </div>
+                                <div class="testimonial_content">
+                                    <p>The leaderboards and tournaments keep me coming back every day!</p>
+                                    <h6>ThunderTheo
+                                    </h6>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- sec3 -->
+                        <div>
+                            <div class="testimonial_card">
+                                <div class="testimonial_cardProfilSec">
+                                    <div class="testimonial_cardProfil">
+                                    </div>
+                                </div>
+                                <div class="testimonial_content">
+                                    <p>I love collecting rewards and climbing the ranks!</p>
+                                    <h6>BlazeBrandon
+                                    </h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <p class="testimonial_desc"> <a href="#">Join Now and Play for Free</a></p>
+            </div>
+        </div>
+    </div>
+
     <!-- footer section start -->
     <footer class="footer">
         <div class="container">
