--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home</title>
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css">
-
+    <!-- bootstrap link -->
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <!-- aos link -->
+    <link rel="stylesheet" href="assets/css/aos.css">
+    <!-- font assamese link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <!-- slick css slider link -->
-    <link rel="stylesheet" href="./assets/css/slick.css">
-    <link rel="stylesheet" href="./assets/css/slick-theme.css">
+    <link rel="stylesheet" href="assets/css/slick.css">
+    <link rel="stylesheet" href="assets/css/slick-theme.css">
     <!-- css links -->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- responsive link -->
@@ -37,26 +36,26 @@
                 <div class="header_navbar">
                     <ul class="header_list">
                         <li class="header_item">
-                            <a href="./" class="header_link active">Homepage</a>
+                            <a href="/" class="header_link active">Homepage</a>
                         </li>
                         <li class="header_item">
-                            <a href="./classic-game.html" class="header_link">Classic Games
+                            <a href="classic-games.html" class="header_link">Classic Games
                             </a>
                         </li>
                         <li class="header_item">
-                            <a href="./new-games.html" class="header_link">New Games
+                            <a href="new-games.html" class="header_link">New Games
                             </a>
                         </li>
                         <li class="header_item">
-                            <a href="./new-games.html" class="header_link">How To Play
+                            <a href="How-to-play.html" class="header_link">How To Play
                             </a>
                         </li>
                         <li class="header_item">
-                            <a href="./about-us.html" class="header_link">About Us
+                            <a href="about-us.html" class="header_link">About Us
                             </a>
                         </li>
                         <li class="header_item">
-                            <a href="./contact-us.html" class="header_link">Contact Us
+                            <a href="contact-us.html" class="header_link">Contact Us
                             </a>
                         </li>
                         <li class="close_menu">
@@ -257,12 +256,23 @@
                 </h2>
                 <div class="playTogether_inner">
                     <div class="playTogether_card">
+                        <div class="playTogether_iconWrapp">
+                            <div class="playTogether_icon">
+
+                            </div>
+                        </div>
                         <div class="playTogether_content">
                             <h4>Friend System</h4>
                             <p> Add friends, send gifts, and challenge each other.</p>
                         </div>
                     </div>
                     <div class="playTogether_card">
+                        <div class="playTogether_iconWrapp">
+                            <div class="playTogether_icon"
+                                style="background-image: url(assets/images/play-together2.png);">
+
+                            </div>
+                        </div>
                         <div class="playTogether_content">
                             <h4>Live Chat & Clubs</h4>
                             <p> Engage with the community, create or join casino clubs.</p>
@@ -348,9 +358,8 @@
                             </div>
                         </div>
 
-
-                         <!-- sec1 -->
-                         <div>
+                        <!-- sec1 -->
+                        <div>
                             <div class="testimonial_card">
                                 <div class="testimonial_cardProfilSec">
                                     <div class="testimonial_cardProfil">
@@ -424,32 +433,22 @@
                 <div class="footer_navbar">
                     <ul class="footer_list">
                         <li class="footer_item">
-                            <a href="#" class="footer_link">
+                            <a href="privacy-policy.html" class="footer_link">
                                 Privacy Policy
                             </a>
                         </li>
                         <li class="footer_item">
-                            <a href="#" class="footer_link">
+                            <a href="personal-data-policy.html" class="footer_link">
                                 Personal Information Policy
-
                             </a>
                         </li>
                         <li class="footer_item">
-                            <a href="#" class="footer_link">
+                            <a href="terms-and-conditions.html" class="footer_link">
                                 Terms and conditions
-
                             </a>
                         </li>
-                        <li class="footer_item">
-                            <a href="#" class="footer_link">
-                                Refunds Policy
-
-                            </a>
-                        </li>
-
                     </ul>
                 </div>
-
                 <div class="footer_btm">
                     <div class="footer_btmWrapp">
 
@@ -466,8 +465,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="#" class="ssl_linkIcon"></a>
-
+                        <a href="/" class="ssl_linkIcon"></a>
                     </div>
 
                 </div>
@@ -487,28 +485,19 @@
             </div>
         </div>
     </footer>
-
-
     <!-- footer section end -->
 
-
-
-
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
-
     <!-- jquery link and slick slider link -->
-    <script src="./assets/js/jquery.js"></script>
-    <script src="./assets/js/slick.min.js"></script>
-    <!-- script link  -->
+    <script src="assets/js/jquery-3.7.1.js"></script>
+    <!-- slick slider link -->
+    <script src="assets/js/slick.min.js"></script>
+    <!-- Bootstrap link -->
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <!-- aos link -->
+    <script src="assets/js/aos.js"></script>
+    <!-- main js link  -->
     <script src="assets/js/main.js"></script>
+
 </body>
 
 </html>
