--- a/How-to-play.html
+++ b/How-to-play.html
@@ -69,10 +69,8 @@
         </div>
     </header>
     <!-- header section end -->
-
-
     <!-- banner section  start -->
-    <div class="banner banner--howToplay">
+    <div class="banner banner--howToplay" style="background-image: url(assets/images/how-play-banner.jpg);">
         <div class="container">
             <div class="banner_content">
                 <h1>How to Play Socialsino – Your Guide to Social Casino Fun!
