--- a/contact-us.html
+++ b/contact-us.html
@@ -25,8 +25,8 @@
 
 <body>
 
-      <!-- header section start -->
-      <header class="header">
+    <!-- header section start -->
+    <header class="header">
         <div class="container">
             <div class="header_wrappr">
                 <div class="headere_logo">
@@ -70,10 +70,8 @@
         </div>
     </header>
     <!-- header section end -->
-
-
     <!-- banner section  start -->
-    <div class="banner">
+    <div class="banner" style="background-image: url(assets/images/contact-us-banner.jpg);">
         <div class="container">
             <div class="banner_content">
                 <h1>Contact Us
@@ -152,85 +150,85 @@
     </div>
     <!-- conatct us  end-->
 
- <!-- footer section start -->
- <footer class="footer">
-    <div class="container">
-        <div class="footer_wrapper">
-            <div class="footer_topbar">
-                <div class="footer_disclaimer">
-                    <h4>Disclaimer
-                    </h4>
-                    <p>
-                        Socialsino is a social casino gaming platform for entertainment only. No real money gambling
-                        or cash prizes are available. In-game purchases are for virtual items with no real-world
-                        value. Playing Socialsino does not imply future success in real-money gambling. Users must
-                        be 18+ (or the legal age in their jurisdiction)
-                        and are responsible for complying with local laws. Socialsino does not endorse gambling, and
-                        no real-money transactions occur. If you have concerns about gambling behavior, support is
-                        available at BeGambleAware
-                        <strong>(www.begambleaware.org)</strong> and the
-                        National Council on Problem Gambling <strong>(www.ncpgambling.org)</strong>. Play
-                        responsibly.
-                    </p>
+    <!-- footer section start -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer_wrapper">
+                <div class="footer_topbar">
+                    <div class="footer_disclaimer">
+                        <h4>Disclaimer
+                        </h4>
+                        <p>
+                            Socialsino is a social casino gaming platform for entertainment only. No real money gambling
+                            or cash prizes are available. In-game purchases are for virtual items with no real-world
+                            value. Playing Socialsino does not imply future success in real-money gambling. Users must
+                            be 18+ (or the legal age in their jurisdiction)
+                            and are responsible for complying with local laws. Socialsino does not endorse gambling, and
+                            no real-money transactions occur. If you have concerns about gambling behavior, support is
+                            available at BeGambleAware
+                            <strong>(www.begambleaware.org)</strong> and the
+                            National Council on Problem Gambling <strong>(www.ncpgambling.org)</strong>. Play
+                            responsibly.
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div class="footer_navbar">
-                <ul class="footer_list">
-                    <li class="footer_item">
-                        <a href="privacy-policy.html" class="footer_link">
-                            Privacy Policy
-                        </a>
-                    </li>
-                    <li class="footer_item">
-                        <a href="personal-data-policy.html" class="footer_link">
-                            Personal Information Policy
-                        </a>
-                    </li>
-                    <li class="footer_item">
-                        <a href="terms-and-conditions.html" class="footer_link">
-                            Terms and conditions
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="footer_btm">
-                <div class="footer_btmWrapp">
+                <div class="footer_navbar">
+                    <ul class="footer_list">
+                        <li class="footer_item">
+                            <a href="privacy-policy.html" class="footer_link">
+                                Privacy Policy
+                            </a>
+                        </li>
+                        <li class="footer_item">
+                            <a href="personal-data-policy.html" class="footer_link">
+                                Personal Information Policy
+                            </a>
+                        </li>
+                        <li class="footer_item">
+                            <a href="terms-and-conditions.html" class="footer_link">
+                                Terms and conditions
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer_btm">
+                    <div class="footer_btmWrapp">
 
-                    <div class="Social">
-                        <div class="widget footer-widget">
-                            <h4>Social Tags</h4>
-                            <div class="th-widget-contact">
-                                <div class="th-social style-mask">
-                                    <a class="facebook" href="#"><i class="fab fa-facebook-f"></i></a>
-                                    <a class="twitter" href="#"><i class="fab fa-twitter"></i></a>
-                                    <a class="instagram" href="#"><i class="fab fa-instagram"></i> </a>
-                                    <a class="linkedin" href="#"><i class="fab fa-linkedin"></i></a>
+                        <div class="Social">
+                            <div class="widget footer-widget">
+                                <h4>Social Tags</h4>
+                                <div class="th-widget-contact">
+                                    <div class="th-social style-mask">
+                                        <a class="facebook" href="#"><i class="fab fa-facebook-f"></i></a>
+                                        <a class="twitter" href="#"><i class="fab fa-twitter"></i></a>
+                                        <a class="instagram" href="#"><i class="fab fa-instagram"></i> </a>
+                                        <a class="linkedin" href="#"><i class="fab fa-linkedin"></i></a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
+                        <a href="/" class="ssl_linkIcon"></a>
                     </div>
-                    <a href="/" class="ssl_linkIcon"></a>
-                </div>
 
-            </div>
-        </div>
-    </div>
-    <div class="copyright-wrap text-center bg-repeat background-image"
-        style="background-image: url(assets/images/jiji-bg.png);">
-        <div class="container">
-            <div class="row align-items-center justify-content-center">
-                <div class="col-lg-6">
-                    <p class="copyright-text bg-repeat background-image"
-                        style="background-image: url(&quot;assets/img/bg/jiji-bg.png&quot;);"><i
-                            class="fal fa-copyright"></i> Copyright 2025 <a href="/"> socialsino</a> All Rights
-                        Reserved.</p>
                 </div>
             </div>
         </div>
-    </div>
-</footer>
-<!-- footer section end -->
- 
+        <div class="copyright-wrap text-center bg-repeat background-image"
+            style="background-image: url(assets/images/jiji-bg.png);">
+            <div class="container">
+                <div class="row align-items-center justify-content-center">
+                    <div class="col-lg-6">
+                        <p class="copyright-text bg-repeat background-image"
+                            style="background-image: url(&quot;assets/img/bg/jiji-bg.png&quot;);"><i
+                                class="fal fa-copyright"></i> Copyright 2025 <a href="/"> socialsino</a> All Rights
+                            Reserved.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- footer section end -->
+
     <!-- jquery link and slick slider link -->
     <script src="assets/js/jquery-3.7.1.js"></script>
     <!-- slick slider link -->
