--- a/index.html
+++ b/index.html
@@ -99,63 +99,69 @@
                 <div class="perfectSlider">
                     <!-- sec1 -->
                     <div>
-                        <div class="featured_card">
+                        <a href="#" class="featured_card">
                             <div class="featured_cardContent">
                                 <h4>Golden Spins Slots</h4>
                                 <p>Spin to win big jackpots!</p>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <!-- sec2 -->
                     <div>
-                        <div class="featured_card" style="background-image: url(assets/images/featured-img2.png);">
+                        <a href="#" class="featured_card"
+                            style="background-image: url(assets/images/featured-img2.png);">
                             <div class="featured_cardContent">
                                 <h4>Royal Flush Poker</h4>
                                 <p>Test your skills in multiplayer poker.
                                 </p>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <!-- sec3 -->
                     <div>
-                        <div class="featured_card" style="background-image: url(assets/images/featured-img3.png);">
+                        <a href="#" class="featured_card"
+                            style="background-image: url(assets/images/featured-img3.png);">
                             <div class="featured_cardContent">
                                 <h4>21 Blitz Blackjack</h4>
                                 <p>Fast-paced, high-stakes action.
                                 </p>
                             </div>
-                        </div>
+                        </a>
                     </div>
+
                     <!-- sec4 -->
                     <div>
-                        <div class="featured_card" style="background-image: url(assets/images/featured-img4.png);">
+                        <a href="#" class="featured_card"
+                            style="background-image: url(assets/images/featured-img4.png);">
                             <div class="featured_cardContent">
                                 <h4>Roulette Royale</h4>
                                 <p>Classic casino fun with a social twist.
                                 </p>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <!-- sec5 -->
                     <div>
-                        <div class="featured_card" style="background-image: url(assets/images/featured-img5.png);">
+                        <a href="#" class="featured_card"
+                            style="background-image: url(assets/images/featured-img5.png);">
                             <div class="featured_cardContent">
                                 <h4>Bingo Bonanza</h4>
                                 <p>Exciting rounds with friends.
                                 </p>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <!-- sec6 -->
                     <div>
-                        <div class="featured_card" style="background-image: url(assets/images/featured-img6.png);">
+                        <a href="#" class="featured_card"
+                            style="background-image: url(assets/images/featured-img6.png);">
                             <div class="featured_cardContent">
                                 <h4>Lucky Keno </h4>
                                 <p>Try your luck with big multipliers.
 
                                 </p>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <a href="#" class="btn featured_btn">See All Games</a>
